feat: Implement loading background state management and enhance UI animations

--- a/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-cards-list.component.html
@@ -69,7 +69,7 @@
         </tr>
         }
         @for (card of cards$ | async; track card.id) {
-        <tr class="align-middle">
+        <tr class="align-middle" [@fadeIn] [@fadeOut]>
           @if(editable()){
           <td (click)="editNumberId = card.id" class="text-center cursor-pointer">
             @if(editNumberId === card.id){
