--- a/src/app/modules/collection/binder-list/binder-list.component.html
+++ b/src/app/modules/collection/binder-list/binder-list.component.html
@@ -10,8 +10,8 @@
   </h1>
   <div class="d-flex justify-content-between mb-3">
     <div>
-      <button class="btn btn-primary" (click)="onAddBinder()">
-        <i class="bi bi-plus"></i>
+      <button class="btn text-primary" (click)="onAddBinder()">
+        <i class="bi bi-plus-circle"></i>
         {{ t('add_binder') }}
       </button>
     </div>
