--- a/src/app/modules/collection/card-modal/card-modal.component.html
+++ b/src/app/modules/collection/card-modal/card-modal.component.html
@@ -36,10 +36,10 @@
     @if(card){
     <div class="row mt-3">
       <div class="col-sm-12 col-md-5 pe-3">
-        <img #image class="rounded mx-auto d-block img-fluid" [src]="card | cardImage:setAbbrev"
+        <img #image class="rounded mx-auto d-block img-fluid" [src]="card | cardImage:set"
           [alt]="card.i18n?.name ?? card.name" (error)="image.src='/assets' + card.image; setImageError = true" />
         @if(setImageError) {
-        <div class="text-center text-danger small mb-2">
+        <div class="fw-bold fs-6 text-center text-danger small mb-2">
           {{ 'deck_shared.set_image_not_available' | transloco }}
         </div>
         }
@@ -74,7 +74,7 @@
               <select id="set" class="form-select" formControlName="set">
                 <option [value]="null" [ngValue]="null"> - </option>
                 @for(set of setOptions$ | async; track set) {
-                <option [value]="set.id">
+                <option [value]="set.abbrev">
                   {{ set.fullName }} <span class="text-muted">'{{ set.releaseDate | date:'yy'}}</span>
                 </option>
                 }
@@ -86,6 +86,7 @@
               }}</label>
             <div class="col-12">
               <select id="condition" class="form-select" formControlName="condition">
+                <option [value]="null" [ngValue]="null"> - </option>
                 <option value="MT">{{ t('condition_mint') }}</option>
                 <option value="NM">{{ t('condition_near_mint') }}</option>
                 <option value="EX">{{ t('condition_excellent') }}</option>
