Refactor collection card component and update sorting defaults

--- a/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
+++ b/src/app/modules/collection/collection-cards-list/collection-card/collection-card.component.html
@@ -1,5 +1,9 @@
+@if(isMobile$ | async) {
+{{ cardName() }}
+}@else{
 @if(isCrypt()){
 <app-crypt [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-crypt>
 }@else {
 <app-library [card]="{id: cardId(), number: 0}" [background]="false" [setAbbrev]="setAbbrev()"></app-library>
+}
 }
