--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -7,5 +7,7 @@
 </div>
 <div class="modal-footer" *transloco="let t">
   <button type="button" class="btn btn-outline-secondary" (click)="modal.close(false)">{{ t(cancelLabel) }}</button>
-  <button type="button" ngbAutofocus class="btn btn-primary" (click)="modal.close(true)">{{ t(okLabel) }}</button>
+  <button type="button" ngbAutofocus class="btn" [ngClass]="okButtonType" (click)="modal.close(true)">
+    {{ t(okLabel) }}
+  </button>
 </div>
